# 6502_simulator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  simple_lib.cpp
